2026-04-02: JVM/GC/Boot 深度优化（子代理补充）
- java-advanced/jvm.md: 254→965行，11个Mermaid图，20个VuePress容器
- java-advanced/gc.md: 207→1023行，8个Mermaid图，14个VuePress容器
- spring/boot.md: 235→235+行，深度补充自动配置原理、Starter机制